--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ build-backend = "hatchling.build"
 
 [project]
 name = "malware-atlas"
-version = "0.1.8"
-description = ""
+version = "0.2.10"
+description = "ATLAS - Malware Analysis Description"
 readme = "README.md"
 authors = [{ name = "Mert Degirmenci"}]
 license = { file = "LICENSE" }
@@ -31,25 +31,4 @@ dev = ["python-magic"]
 Homepage = "https://github.com/malware-atlas/atlas"
 
 [project.scripts]
-atlas = "src.atlas:main"
-
-[tool.bumpver]
-current_version = "0.1.8"
-version_pattern = "MAJOR.MINOR.PATCH"
-commit_message = "bump version {old_version} -> {new_version}"
-commit = true
-tag = true
-push = false
-
-[tool.bumpver.file_patterns]
-"pyproject.toml" = [
-    'current_version = "{version}"',
-    'version = "{version}"'
-]
-"README.md" = [
-    "{version}",
-    "{pep440_version}",
-]
-
-[tool.setuptools]
-py-modules = []
+atlas = "atlas.atlas:main"
